--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,26 @@ img.profile {
     color: #fff;
 }
 
+/* .fa-linkedin{
+    color: #0077b5;
+}
+
+.fa-github{
+    color:#333;
+}
+
+.fa-hackerrank{
+    color: #25B658;
+}
+
+.fa-medium{
+    color: #00ab6c;
+}
+
+.fa-stack-overflow{
+    color:#f48024;
+} */
+
 /* .menu, */
 .project {
     border-bottom: 1px solid #007bff;
@@ -77,4 +97,8 @@ img.profile {
 
 .table tr td:last-child {
     /* text-align: left; */
+}
+
+.table .border-top{
+    border-top: 2px solid #fff;
 }
