--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,25 @@ img.profile {
     box-shadow: 0px 0px 5px #222;
 }
 
+
 .text-grey {
     color: #aaa;
+}
+
+.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 2em;
+}
+
+.sticky-nav{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 99999999;
+    padding: 0.5em;
+    background: #141A32;
+    /* border-radius: 0 0 .5em .5em; */
 }
 
 @media (min-width: 768px) {
@@ -39,7 +56,14 @@ img.profile {
         display: block;
         width: 100%;
         background: #0f152d;
-        margin: .5em;
+        margin: 0.5em;
+    }
+}
+
+
+@media (max-width: 768px){
+    img.profile{
+        max-width: 100px;
     }
 }
 
@@ -179,6 +203,6 @@ img.profile {
     line-height: 3em; */
 }
 
-.resume .table td{
+.resume .table td {
     padding: .2em;
 }
