--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,12 @@ h2.title span {
     color: #007bff;
 }
 
+h2.title .sprkly {
+    background: transparent url(../img/sparkles.gif);
+    text-shadow: 0px 0px 5px #0e0088, 0px 0px 6px #007bff;
+    font-weight: bold;
+}
+
 img.profile {
     max-width: 200px;
     border-radius: 100%;
@@ -41,7 +47,7 @@ img.profile {
     top: 2em;
 }
 
-.sticky-nav{
+.sticky-nav {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -49,6 +55,14 @@ img.profile {
     padding: 0.5em;
     background: #141A32;
     /* border-radius: 0 0 .5em .5em; */
+}
+
+.sticky-nav .btn {
+    background: #24449b;
+    color: #fff;
+    border: none;
+    outline: none;
+    box-shadow: none !important;
 }
 
 @media (min-width: 768px) {
@@ -61,8 +75,8 @@ img.profile {
 }
 
 
-@media (max-width: 768px){
-    img.profile{
+@media (max-width: 768px) {
+    img.profile {
         max-width: 100px;
     }
 }
@@ -80,7 +94,6 @@ img.profile {
 }
 
 .social-links a i {
-    font-size: 1.5em;
     width: 1.75em;
     color: #fff;
     padding: .25em;
@@ -182,14 +195,29 @@ img.profile {
     text-align: left
 }
 
+.about .social-links a i {
+    font-size: 1.3em;
+}
+
 .stat {
     font-size: 1.15em;
     font-weight: lighter;
     text-align: left
 }
 
-.stat .col-md-6, .stat .col-md-12{
+.stat .col-md-6,
+.stat .col-md-12 {
     padding: 1em;
+}
+
+.stat.social-links i.fab {
+    /* font-size: 1.5em; */
+    width: 1.75em;
+    color: #fff;
+    padding: .25em;
+    border-radius: .25em;
+    margin: .25em 0;
+    text-align: center;
 }
 
 .contact-icon-link {
@@ -211,7 +239,7 @@ img.profile {
     padding: .2em;
 }
 
-.floating-btn{
+.floating-btn {
     position: fixed;
     bottom: 1em;
     right: 1em;
@@ -224,14 +252,3 @@ img.profile {
     background: #24449b;
     padding: .5em;
 }
-
-.stat.social-links i.fab{
-    font-size: 1.5em;
-    width: 1.75em;
-    color: #fff;
-    padding: .25em;
-    border-radius: .25em;
-    margin: .25em 0;
-    text-align: center;
-}
-
